--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"vscode": "^1.53.0"
 	},
 	"categories": [
-		"Other"
+		"Themes",
+		"Snippets"
 	],
 	"activationEvents": [
 		"*"
@@ -17,10 +18,6 @@
 	"main": "./src/extension.js",
 	"contributes": {
 		"commands": [
-			{
-				"command": "easierprogramming.helloWorld",
-				"title": "Hello World"
-			},
 			{
 				"command": "easierprogramming.mrc-nodejs-backend",
 				"title": "Create Nodejs Backend"
@@ -42,6 +39,13 @@
 			{
 				"language": "python",
 				"path": "./src/snippets/python.json"
+			}
+		],
+		"themes": [
+			{
+				"label": "EasierProgramming Theme",
+				"path": "./src/theme/easierprogramming.json",
+				"uiTheme": "vs-dark"
 			}
 		]
 	},
